# blueoxide

./: .gitignore  Cargo.toml  ChangeLog.md  DesignLog.md  FFI-libbladerf-docs.md  FFI-libxtrx-docs.md  FFI-limesuitesdk-docs.md  README.md  Verification.md  channelizer.rs  hackrf.rs  lime.rs  xtrx.rs
.github/workflows/: ci.yml
src/: advertising.rs  att.rs  ble.rs  capture.rs  complex.rs  crypto.rs  demod.rs  error.rs  iq.rs  l2cap.rs  lib.rs  link_layer.rs  ll_control.rs  main.rs  native.rs  pcapng.rs  periodic.rs  sdr.rs  smp.rs
src/backends/: bladerf.rs  limesdr.rs  mod.rs  xtrx.rs
src/ll_control/: cs.rs
tests/: cli_connection.rs  cli_data.rs  cli_decode.rs  cli_live.rs
